k8s/httpd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
        - name: www
          mountPath: /usr/local/apache2/htdocs
      volumes:
      - name: www
        hostPath:
          path: /mnt/wd/www
          type: Directory
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-mnt
  labels:
    app: httpd-mnt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-mnt
  template:
    metadata:
      labels:
        app: httpd-mnt
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
        - name: mnt
          mountPath: /usr/local/apache2/htdocs/mnt
        - name: downloads
          mountPath: /usr/local/apache2/htdocs/downloads
      volumes:
      - name: mnt
        hostPath:
          path: /mnt
          type: Directory
      - name: downloads
        hostPath:
          path: /opt/k3s/qbittorrent/downloads
          type: Directory
