k8s/httpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  #clusterIP: None
  selector:
    app: httpd
  ports:
  - name: httpd
    port: 8080
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: httpd-mnt
  labels:
    app: httpd-mnt
spec:
  #clusterIP: None
  selector:
    app: httpd-mnt
  ports:
  - name: httpd
    port: 8080
    targetPort: 80
