k8s/httpd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
spec:
  rules:
  - host: httpd.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd
            port:
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-wd
spec:
  rules:
  - host: wd.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpd-wd
            port:
              number: 8080
